// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarEntity /> should render a avatar entity with lots of data 1`] = `
<styled.div
  data-component-type="avatar_entity"
>
  <styled.div
    isHoverable={false}
    size="normal"
  >
    <div>
      <Avatar
        imageUrl="www.example.com"
        initials="JW"
        size="medium"
        statusDot="indigo"
      />
    </div>
    <styled.div
      isCompact={false}
      size="normal"
    >
      <Text
        color="#262D33"
        isInline={true}
        isTruncated={true}
        tag="span"
        type="body"
      >
        John Wick
      </Text>
      <Text
        color="#424F5C"
        isInline={true}
        isTruncated={true}
        tag="span"
        type="small"
      >
        Guy Killer
      </Text>
    </styled.div>
  </styled.div>
  <Text
    color="#424F5C"
    isInline={false}
    isTruncated={true}
    margins={
      Object {
        "left": 48,
      }
    }
    tag="span"
    type="small"
  >
    In Cinemas 2019
  </Text>
</styled.div>
`;

exports[`<AvatarEntity /> should render a basic avatar entity 1`] = `
<styled.div
  data-component-type="avatar_entity"
>
  <styled.div
    isHoverable={false}
    size="normal"
  >
    <div>
      <Avatar
        initials="JW"
        size="medium"
      />
    </div>
    <styled.div
      isCompact={false}
      size="normal"
    >
      <Text
        color="#262D33"
        isInline={true}
        isTruncated={true}
        tag="span"
        type="body"
      >
        John Wick
      </Text>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a basic compact avatar entity 1`] = `
<styled.div
  data-component-type="avatar_entity"
>
  <styled.div
    isHoverable={false}
    size="normal"
  >
    <div>
      <Avatar
        initials="JW"
        size="medium"
      />
    </div>
    <styled.div
      isCompact={true}
      size="normal"
    >
      <Text
        color="#262D33"
        isInline={true}
        isTruncated={true}
        tag="span"
        type="body"
      >
        John Wick
      </Text>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a compact small avatar entity 1`] = `
<styled.div
  data-component-type="avatar_entity"
>
  <styled.div
    isHoverable={false}
    size="small"
  >
    <div>
      <Avatar
        imageUrl="www.example.com"
        initials="JW"
        size="small"
        statusDot="indigo"
      />
    </div>
    <styled.div
      isCompact={true}
      size="small"
    >
      <Text
        color="#262D33"
        isInline={true}
        isTruncated={true}
        tag="span"
        type="small"
      >
        John Wick
      </Text>
      <Text
        color="#424F5C"
        isInline={true}
        isTruncated={true}
        margins={
          Object {
            "left": 8,
          }
        }
        tag="span"
        type="xsmall"
      >
        (Guy Killer)
      </Text>
    </styled.div>
  </styled.div>
</styled.div>
`;
